--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@
 }
 
 
+
+
 .header-container {
     height: 100px;
     background-color: lightblue;
-    padding: 15px 150px;
-    width: ;
+    padding: 0px 150px;
 }
 
 .navbar {
@@ -24,7 +25,27 @@
 .main-content {
     height: 600px;
 
+
+
 }
+
+.container-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px dashed black;
+
+
+}
+
+.primary-content {
+    width: 60%;
+    height: 80%;
+    background-color: pink;
+    border: 1px dashed black;
+
+}
+
 
 .first-box {
     background-color: darkblue;
@@ -32,19 +53,61 @@
 
 .second-box, .fourth-box {
     background-color: white;
+    padding: 0px 150px;
+
+
 }
 
 .third-box {
     background-color: grey;
+    padding: 0px 150px;
+
 }
 
 .fifth-box {
     height: 800px;
     background-color: grey;
+    padding: 0px 150px;
+
+}
+
+.first-content {
+    border: 1px dashed black;
+    width: 65%;
+    height: 80%;
+    background-color: blue;
+
+
+}
+.second-content {
+    border: 1px dashed black;
+    width: 35%;
+    height: 80%;
+    background-color: pink;
+
+}
+
+.fifth-content {
+    border: 1px dashed black;
+    width: 100%;
+    height: 80%;
+    background-color: green;
+    padding: 10px 150px;
+
+
 }
 
 
 footer {
     height: 800px;
     background-color: rgba(28, 25, 25, 0.946);
+
+}
+
+.main-footer {
+    height: 600px;
+}
+
+.lower-footer {
+    height: 200px;
 }
