--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,39 @@
 .header-container {
     height: 100px;
     background-color: lightblue;
-    padding: 0px 150px;
-}
-
-.navbar {
-    min-height: 50px;
-    padding: 30px;
-    border: 1px dashed black;
-    /* display: flex;
-    align-items: center; */
+    padding: 10px 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-content {
     height: 600px;
 
+}
 
+.logo {
+    width: 25%;
+}
 
+.navbar {
+    width: 50%;
+
+}
+
+.navbar {
+    width: 50%;
+
+}
+
+.login {
+    width: 25%;
+
+}
+
+.logo, .navbar, .login {
+    border: 1px dashed black;
+    min-height: 50px;
 }
 
 .container-flex {
@@ -54,7 +71,6 @@
 .second-box, .fourth-box {
     background-color: white;
     padding: 0px 150px;
-
 
 }
 
@@ -92,7 +108,6 @@
     width: 100%;
     height: 80%;
     background-color: green;
-    padding: 10px 150px;
 
 
 }
@@ -101,13 +116,44 @@
 footer {
     height: 800px;
     background-color: rgba(28, 25, 25, 0.946);
+    
 
 }
 
 .main-footer {
     height: 600px;
+    border: 1px dashed black;
+    display: flex;
+    align-items: flex-start;
+    padding: 0px 150px;
 }
 
 .lower-footer {
     height: 200px;
+    display: flex;
+    align-items: center;
+
+}
+
+.lower-bar-footer {
+    
+    height: 80%;
+    border: 1px dashed black;
+    width: 80%;
+    background-color:aqua;
+
+}
+
+.main-column-footer {
+    border: 1px dashed black;
+    width: 40%;
+    height: 95%;
+    background-color: pink;
+}
+
+.secondary-column-footer {
+    width: 15%;
+    height: 95%;
+    border: 1px dashed white;
+    background-color:aquamarine;
 }
