--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,9 @@
 .header-container {
     height: 100px;
     background-color: lightblue;
-    padding: 10px 150px;
+    padding: 30px 150px;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .main-content {
@@ -24,6 +23,9 @@
 
 .logo {
     width: 25%;
+    align-items: center;
+
+    padding: 5px;
 }
 
 .navbar {
@@ -33,17 +35,21 @@
 
 .navbar {
     width: 50%;
+    text-align: center;
 
 }
 
 .login {
     width: 25%;
+    text-align: right;
+    padding: 5px;
 
 }
 
 .logo, .navbar, .login {
     border: 1px dashed black;
-    min-height: 50px;
+    min-height: 40px;
+    background-color: orange;
 }
 
 .container-flex {
