--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,9 @@
 
 .logo {
     width: 25%;
-    padding: 5px;
+    padding: 10px;
 }
+
 
 .navbar {
     width: 50%;
@@ -135,11 +136,11 @@ footer {
 
 .lower-bar-footer {
     
-    height: 80%;
+    height: 180px;
     border: 1px dashed black;
     width: 80%;
     background-color:aqua;
-
+    margin-top: 10px;
 }
 
 .main-column-footer {
